Fixes issue of content overlapping navbar while scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ header {
     width: 100%;
     height: 100px;
     background-color: #000;
-    z-index: 20;
+    z-index: 30;
 }
 header div {
     width: 20%;
